gaps fixed

--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,6 +1,6 @@
 .cover__subtitle {
     max-width: 360px;
-    font-size: 19px;
+    font-size: 18px;
     line-height: 22px;
     font-weight: 400;
     margin: 0;
