--- a/blocks/footer/__item/footer__item.css
+++ b/blocks/footer/__item/footer__item.css
@@ -10,4 +10,8 @@
     .footer__item {
         margin-bottom: 32px;
    }
+
+   .footer__item:last-child {
+    margin-bottom: 0;
+   }
 }
