--- a/blocks/lead/__figure/lead__figure.css
+++ b/blocks/lead/__figure/lead__figure.css
@@ -2,15 +2,15 @@
     margin: 64px 0 0;
 }
 
-/*
-@media screen and (min-width: 768px)  {
+
+@media screen and (max-width: 1023px)  {
     .lead__figure {
         margin: 56px 0 0;
     }
 }
 
-@media screen and (min-width: 320px)  {
+@media screen and (max-width: 767px)  {
     .lead__figure {
         margin: 40px 0 0;
     }
-}*/
+}
