--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -12,5 +12,6 @@
         max-width: 288px;
         font-size: 16px;
         line-height: 20px;
+        margin-top: 16px;
     }
 }
